[package]
name = "televideo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "televideo"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1.0"
scraper = "0.20"
chrono = "0.4"
regex = "1.11"
image = "0.25"
ratatui-image = "8.0"
